clusters/constellation/apps/potber/potber-auth/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potber-auth-staging
  namespace: potber
  labels:
    app: potber-auth-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potber-auth-staging
  template:
    metadata:
      labels:
        app: potber-auth-staging
    spec:
      containers:
      - name: potber-auth-staging
        image: spuxx/potber-auth:main-20241229-183236-390337bc061908f36848bdc887ef36e78e53df5e # {"$imagepolicy": "potber:potber-auth-staging"}
        ports:
        - containerPort: 3000
        securityContext:
          runAsNonRoot: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
